update Session